@@ -3,7 +3,7 @@ package POE::Component::IRC::Plugin::MegaHAL;
 use strict;
 use warnings;
 use Carp;
-use Encode qw(decode_utf8 encode_utf8);
+use Encode qw(decode_utf8 encode_utf8 is_utf8);
 use POE;
 use POE::Component::AI::MegaHAL;
 use POE::Component::IRC::Common qw(l_irc matches_mask_array irc_to_utf8 strip_color strip_formatting);
@@ -158,7 +158,7 @@ sub _msg_handler {
 
     # should we reply?
     my $event = '_no_reply';
-    if ($self->{Own_channel} && (l_irc($chan) eq l_irc($self->{Own_channel}))
+    if ($self->{Own_channel} && $self->_is_own_channel($chan)
         || $type eq 'public' && $what =~ s/^\s*\Q$nick\E[:,;.!?~]?\s//i
         || $self->{Talkative} && $what =~ /\Q$nick/i)
     {
@@ -184,11 +184,21 @@ sub _msg_handler {
     return;
 }
 
+sub _is_own_channel {
+    my $self = shift;
+    my $chan = l_irc(shift);
+    my $own  = l_irc($self->{Own_channel});
+
+    $chan = irc_to_utf8($chan) if is_utf8($own);
+    return 1 if $chan eq $own;
+    return;
+}
+
 sub _greet_handler {
     my ($self, $kernel, $user, $chan) = @_[OBJECT, KERNEL, ARG0, ARG1];
 
     return if $self->_ignoring_user($user, $chan);
-    return if !$self->{Own_channel} || (l_irc($chan) ne l_irc($self->{Own_channel}));
+    return if !$self->{Own_channel} || !$self->_is_own_channel($chan);
 
     $kernel->post($self->{MegaHAL}->session_id() => initial_greeting => {
         event   => '_megahal_greeting',
