@@ -1,5 +1,6 @@
 0.38
     - Prevent double encoding of non-ASCII channel names
+    - Support non-ASCII 'Own_channel' parameter
 
 0.37  Wed Feb 24 02:39:35 GMT 2010
     - Always decode bytes before we use them
